remove transparent columns from contact links

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                                                     <a href="https://www.spotify.com/us/email-reset/#NApiCkoKDVNwb3RpZnktdXNlcnMSC2pvc2hzbWF5aGV3GgOoAQElLLIrVjIiCggBfV5YXHyu-xIWgO4oR17-LJF-Sb50SO4RWxt_M3MYchIU1LL_wFrCA24thRXpSfiY--qifK0"
                                                         style="border:none; margin:0px; padding:0px; text-decoration:none; font-family:Circular,'Helvetica Neue',Helvetica,Arial,sans-serif; font-weight:200; text-align:left; color:rgb(30,215,96); line-height:20px;">
                                                         <span>
-                                                            https://www.spotify.com/us/email-reset/
+                                                            https://www.spotify.com/us/email-reset/#
                                                         </span>
-                                                        <span>#NApiCkoKDVNwb3RpZnktdXNlcnMSC2</span>
+                                                        <span>NApiCkoKDVNwb3RpZnktdXNlcnMSC2</span>
                                                         <span>pvc2hzbWF5aGV3GgOoAQElLLIrVjIiCggBfV5YXHyu</span>
                                                         <span>-xIWgO4oR17-LJF-Sb50SO4RWxt_M3MYchIU1LL_</span>
                                                         wFrCA24thRXpSfiY--qifK0
@@ -210,7 +210,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td align="left" valign="middle" style="padding: 0 0 0 0;" width="80%">
+                                    <td align="left" valign="middle" style="padding: 0 0 0 0;" width="100%">
                                         <table cellpadding="0" cellspacing="0" border="0" role="presentation"
                                             width="100%"
                                             style="border:none;margin:0px;padding:0px;border-collapse:collapse;width:100%;height:30px; max-width: 600px;">
@@ -289,8 +289,7 @@
                                 <tr>
                                     <td align="left" valign="middle" style="padding: 0 0 0 0;" width="5%">
                                     <td align="center" valign="middle"
-                                        style="border: 1px solid rgb(209,213,217); padding: 1px 0 0 0 ; height:0px;background-color:rgb(209,213,217);"
-                                        width="90%">
+                                        style="border: 1px solid rgb(209,213,217); padding: 0 0 0 0 ;" width="90%">
                                     </td>
                                     <td align="right" valign="middle" style="padding: 0 0 0 0;" width="5%">
                                 </tr>
@@ -321,7 +320,7 @@
                                             target="_blank"
                                             data-saferedirecturl="https://www.google.com/url?q=https://itunes.apple.com/app/spotify-music/id324684580&amp;source=gmail&amp;ust=1701079918818000&amp;usg=AOvVaw0Q_DjUerHdrtNqii6Bdny3">Android</a>
                                         <a href="https://itunes.apple.com/app/spotify-music/id324684580"
-                                            style="border-style:none solid none none;border-right-width:1px;border-left-width:1px;border-right-color:rgb(195,195,195);border-left-color:transparent;margin:0px;padding:0px 7px 0px 3px;text-decoration:none;display:inline-block;color:rgb(109,109,109);font-weight:bold"
+                                            style="border-style:none solid none none;border-right-width:0px;border-left-width:1px;border-right-color:rgb(195,195,195);border-left-color:transparent;margin:0px;padding:0px 7px 0px 3px;text-decoration:none;display:inline-block;color:rgb(109,109,109);font-weight:bold"
                                             target="_blank"
                                             data-saferedirecturl="https://www.google.com/url?q=https://itunes.apple.com/app/spotify-music/id324684580&amp;source=gmail&amp;ust=1701079918818000&amp;usg=AOvVaw0Q_DjUerHdrtNqii6Bdny3">Other</a>
 
@@ -392,14 +391,14 @@
                                     </td>
 
                                     <td align="center" valign="middle"
-                                        style="border:none;margin:0px;padding:0px;font-family:Circular,'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:200;text-align:left;text-decoration:none;font-size:11px;line-height:2em;color:rgb(136,137,140)"
+                                        style="border:none;margin:0px;padding:0px;font-family:Circular,'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:200;text-align:left;text-decoration:none;font-size:11px;line-height:15px;color:rgb(136,137,140)"
                                         width="90%">
 
                                         <a href="https://www.spotify.com/us/legal/end-user-agreement/"
                                             style="color:rgb(109,109,109);text-decoration:none;" target="_blank"
                                             data-saferedirecturl="https://www.google.com/url?q=https://www.spotify.com/us/legal/end-user-agreement/&amp;source=gmail&amp;ust=1700889872732000&amp;usg=AOvVaw2P7yYOT1CbISUGLal60d1U">
                                             <span
-                                                style="color:rgb(109,109,109); font-weight:bold; border-right: 1px solid rgb(136,137,140); padding-right: 5px;">Terms
+                                                style="border-style:none solid none none;border-right-width:1px;border-right-color:rgb(195,195,195);margin:0px;padding:0px 5px 0px 0px;text-decoration:none;display:inline-block;color:rgb(109,109,109);font-weight:bold;">Terms
                                                 of Use</span>
                                         </a>
 
@@ -407,7 +406,7 @@
                                             style="color:rgb(109,109,109);text-decoration:none;" target="_blank"
                                             data-saferedirecturl="https://www.google.com/url?q=https://www.spotify.com/us/legal/end-user-agreement/&amp;source=gmail&amp;ust=1700889872732000&amp;usg=AOvVaw2P7yYOT1CbISUGLal60d1U">
                                             <span
-                                                style="color:rgb(109,109,109); font-weight:bold; border-right: 1px solid rgb(136,137,140); padding-right: 5px;">Technical
+                                                style="border-style:none solid none none;border-right-width:1px;border-left-width:1px;border-right-color:rgb(195,195,195);border-left-color:transparent;margin:0px;padding:0px 5px 0px 0px;text-decoration:none;display:inline-block;color:rgb(109,109,109);font-weight:bold;">Technical
                                                 Requirements</span>
 
                                         </a>
@@ -416,11 +415,10 @@
                                             style="color:rgb(109,109,109);text-decoration:none;" target="_blank"
                                             data-saferedirecturl="https://www.google.com/url?q=https://www.spotify.com/us/legal/end-user-agreement/&amp;source=gmail&amp;ust=1700889872732000&amp;usg=AOvVaw2P7yYOT1CbISUGLal60d1U">
                                             <span
-                                                style="color:rgb(109,109,109); font-weight:bold; border-right: 1px solid rgb(136,137,140); padding-right: 5px;">Contact
+                                                style="color:rgb(109,109,109); font-weight:bold; padding-right: 0px;">Contact
                                                 Us</span>
 
                                         </a>
-
 
                                     </td>
                                     <td align="right" valign="middle" style="padding: 0 0 0 0;" width="5%">
